@@ -24,7 +24,7 @@
   <br/><strong>Bugzilla:</strong>
   <ul>
     <li><a href="${team.bugzilla.baseurl}enter_bug.cgi?product=$team.bugzilla.product&component=$team.bugzilla.component">Report Bug in Translation</a></li>
-    <li><a href="${team.bugzilla.baseurl}buglists.cgi?product=$team.bugzilla.product&component=$team.bugzilla.component">Show Existing Bugs</a></li>
+    <li><a href="${team.bugzilla.baseurl}buglist.cgi?product=$team.bugzilla.product&component=$team.bugzilla.component">Show Existing Bugs</a></li>
   </ul>
   #end if
   
