@@ -1054,7 +1054,7 @@
             <email>menthos@gnome.org</email>
 	    <irc-nickname>menthos</irc-nickname>
 	    <bugzilla-account>menthos@menthos.com</bugzilla-account>
-	    <webpage>http://menthos.com/</webpage>
+	    <webpage>http://www.advogato.org/person/menthos/</webpage>
 	    <hackergotchi>http://planet.gnome.org/heads/menthos.png</hackergotchi>
         </coordinator>
 
