@@ -37,7 +37,6 @@ from Cheetah.Template import Template
 
 print "Content-type: text/html; charset=UTF-8\n"
 
-#print os.getenv("PATH_INFO")
 
 
 def get_stats_for(here, module, trdomain, branch, type, sortorder='name'):
