@@ -1,5 +1,10 @@
 2006-03-08  Danilo Šegan  <danilo@gnome.org>
 
+	* templates/team.tmpl: Added.
+	* teams.py: Support single team display.
+
+2006-03-08  Danilo Šegan  <danilo@gnome.org>
+
 	* teams.py: Set up /teams/ actions.
 	* templates/list-teams.tmpl: Listing of all teams.
 
